membuat artikel lailatul qadar

--- a/_config.yml
+++ b/_config.yml
@@ -74,23 +74,15 @@ minima:
 # Google Analytics
 google_analytics: G-W5MK1ZWNHG
 
+# Quran
+
+# https://files.alislam.cloud/pdf/Holy-Quran-Indonesian-Short-Commentary-Vol-1.pdf
+# https://files.alislam.cloud/pdf/Holy-Quran-Indonesian-Short-Commentary-Vol-2.pdf
+
+
 # [[^]] [^]: [](/referensi/.html)
 
 ### --- UUID --- ###
-
-# 0565ed3a-fc52-4cd2-a521-abef402fef2a
-
-# 2ce79ef8-c42a-4905-a317-348f078efe8d
-
-# afc69fb8-0ba2-4f5e-9e00-4101edbec041
-
-# 31c4bb18-504a-4db2-a6c9-adae4dbb84e3
-
-# d491a6a7-5667-4af4-8270-279e998f89c0
-
-# 5c20ed10-d526-4bc7-8027-91b6704acce8
-
-# a427116f-b5f4-459a-8bf1-54a676999fee
 
 # 3c055fad-6330-47c8-85cd-57b8c857d779
 
